--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <!-- Stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -57,22 +59,26 @@
             </div>
             <div class="input-group f-class">
                 <div>
-                    <label for="">First Class ($ <span id="first-class-price">150</span>)</label>
+                    <label for="">First Class ($150)</label>
                     <input class="inp-style inp-width" type="text" name="" id="first-class-ticket" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span id="first-class-plus">+</span> <span id="first-class-minus">-</span></p>
+                    <!-- <p> <span id="first-class-plus">+</span> <span id="first-class-minus">-</span></p> -->
+                    <button class="btn btn-success" id="first-class-plus">+</button>
+                    <button class="btn btn-danger" id="first-class-minus">-</button>
                     
                 </div>
             </div>
             
             <div class="input-group f-class">
                 <div>
-                    <label for="">Economy ($ <span id="economy-price">100</span>)</label>
-                    <input class="inp-style inp-width" type="number" name="" id="economy-ticket" value="0">
+                    <label for="">Economy ($100)</label>
+                    <input class="inp-style inp-width" type="text" name="" id="economy-ticket" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span id="economy-plus">+</span> <span id="economy-minus">-</span> </p>
+                    <!-- <p> <span id="economy-plus">+</span> <span id="economy-minus">-</span> </p> -->
+                    <button class="btn btn-success" id="economy-plus">+</button>
+                    <button class="btn btn-danger" id="economy-minus">-</button>
                 </div>
             </div>
             <div class="calculations">
