--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
     <div id="conformation-section">
         <img src="images/success.png" alt="">
-        <p class="text-success text-center">your order has been placed</p>
-        <p class="text-success text-center">Thank you for being with Us</p>
+        <p class="text-success text-center">your order has been placed..!</p>
+        <p class="text-success text-center">....Thank you......!</p>
         <button class="btn btn-success btn-lg" id="back-btn">Back</button>
         
     </div>
